kong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-probe
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx
        image: linuxgeekup/rnd-magic-box:best15
        ports:
        - containerPort: 80
