kong/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: default
  annotations:
    konghq.com/plugins: kong.rate-limit-rancher
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
