kong/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-route
  namespace: default
spec:
  parentRefs:
  - name: kong-gw
  hostnames:
  - rancher-internal.inb.seliselocal.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-test
      port: 80
